refactor: deletado BD e API